--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -22,18 +22,25 @@ $grid-width: 114rem
 $gutter-horizontal: 6rem
 $gutter-row-vertical: 8rem
 
-// Сетка планшет
+// Сетка планшет - горизонталь
 $grid-width-tablet: 90rem
 $gutter-horizontal-tablet: 2rem
-//$gutter-row-vertical-tablet: 8rem
 
+// Сетка планшет - вертикаль
+$grid-width-tablet-v: 60rem
+$gutter-row-vertical-tablet-v: 6rem
 
 // Размеры шрифтов десктоп
 $font-size-h2: 3.6rem
 $font-size-h3: 2rem
 $font-size-paragraph: 1.6rem
 
-// Размеры шрифтов планшет
+// Размеры шрифтов планшет - горизонталь
 $font-size-h2-tablet: 3rem
 $font-size-h3-tablet: 1.7rem
 $font-size-paragraph-tablet: 1.4rem
+
+// Размеры шрифтов планшет - вертикаль
+$font-size-h2-tablet-v: 3.6rem
+$font-size-h3-tablet-v: 3rem
+$font-size-paragraph-tablet-v: 2rem
