--- a/sass/components/_feedback-card.sass
+++ b/sass/components/_feedback-card.sass
@@ -6,8 +6,15 @@
   transform: skew(-25deg)
   @include respond(tab-land)
     padding: 4rem 9rem
+  @include respond(tab-port)
+      transform: skew(-5deg)
+      padding: 7rem
+      width: 100%
+      text-align: center
   & > *
     transform: skew(25deg)
+    @include respond(tab-port)
+      transform: skew(5deg)
   &__image
     width: 17rem
     height: 17rem
@@ -18,6 +25,9 @@
     margin-right: 4rem
     overflow: hidden
     position: relative
+    @include respond(tab-port)
+      float: none
+      margin: 0 auto 4rem
     img
       width: 100%
       transform: scale(1.1)
