--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -5,6 +5,8 @@ body
   color: $font-color
   @include respond(tab-land)
     font-size: $font-size-paragraph-tablet
+  @include respond(tab-port)
+    font-size: $font-size-paragraph-tablet-v
 
 .title-first
   color: $light-color
@@ -19,17 +21,22 @@ body
     animation: leftToRight 2s ease-in .5s
     @include respond(tab-land)
       font-size: 4rem
+    @include respond(tab-port)
+      letter-spacing: .8rem
+      font-size: 4.8rem
   &__subtitle
     display: block
     text-transform: lowercase
     font-size: 4rem
     line-height: 4.8rem
-    letter-spacing: 5px
+    letter-spacing: .5rem
     font-weight: 100
     animation: rightToLeft 2s ease-in .5s
     margin-bottom: 5rem
     @include respond(tab-land)
       font-size: 3.2rem
+    @include respond(tab-port)
+      margin-bottom: 8rem
 
 .title-secondary
   text-transform: uppercase
@@ -44,6 +51,11 @@ body
   text-shadow: $text-shadow
   @include respond(tab-land)
     font-size: $font-size-h2-tablet
+  @include respond(tab-port)
+    font-size: $font-size-h2-tablet-v
+    line-height: 5rem
+    letter-spacing: .8rem
+    //padding: 0 3rem
   &:hover
     text-shadow: $text-shadow
     transform: scale(1.04)
@@ -58,6 +70,9 @@ body
   text-transform: uppercase
   @include respond(tab-land)
     font-size: $font-size-h3-tablet
+  @include respond(tab-port)
+    line-height: 3.6rem
+    font-size: $font-size-h3-tablet-v
 .paragraph
   font-size: $font-size-paragraph
   line-height: 140%
@@ -66,3 +81,5 @@ body
   overflow-wrap: break-word
   @include respond(tab-land)
     font-size: $font-size-paragraph-tablet
+  @include respond(tab-port)
+    font-size: $font-size-paragraph-tablet-v
