--- a/sass/components/_adventure-card.sass
+++ b/sass/components/_adventure-card.sass
@@ -7,6 +7,8 @@
   box-shadow: $box-shadow
   @include respond(tab-land)
     padding: 1.7rem
+  @include respond(tab-port)
+    padding: 4rem
   &:hover
     transform: scale(1.1)
   &__icon
