--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -15,6 +15,8 @@
         margin-right: 5rem
         @include respond(tab-land)
           margin-right: 4rem
+        @include respond(tab-port)
+          margin: 0 3rem 3rem 0
 
   &__link
     transition: all .2s
@@ -23,7 +25,8 @@
       font-weight: 300
       letter-spacing: .2rem
       font-size: $font-size-paragraph
-      
+      @include respond(tab-port)
+        font-size: $font-size-paragraph-tablet-v
     &:hover, &:active
       color: $base-light-color
       text-shadow: $text-shadow
